# nvim-treesitter-nginx

./: README.md
lua/nvim-treesitter-nginx/: internal.lua
tree-sitter-nginx/: Cargo.toml  LICENSE.md  README.md  binding.gyp  package.json
tree-sitter-nginx/bindings/node/: binding.cc  index.js
tree-sitter-nginx/bindings/rust/: lib.rs
tree-sitter-nginx/corpus/: block_directives.txt  comment_directives.txt  conf_directives.txt  lua_block_directives.txt  simple_directives.txt
tree-sitter-nginx/queries/: folds.scm
tree-sitter-nginx/src/: grammar.json  node-types.json
